tests/trust_inference/trust_inference.exp
Error ------------------------------------------------------------------------------------------------------ t2.js:12:10

Cannot return `g(...)` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2]. [incompatible-trust]

   t2.js:12:10
   12|   return g(x); // Fails.
                ^^^^

References:
   t2.js:3:34
    3| function h(x: $Trusted<number>): number {
                                        ^^^^^^ [1]
   t2.js:11:24
   11| function f(x: number): $Trusted<number> {
                              ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- t2.js:16:9

Cannot call `f` with `42` bound to `x` because explicit 'any' [1] is incompatible with trusted number [2].
[incompatible-trust]

   t2.js:16:9
   16| f(42 as any);
               ^^^ [1]

References:
   t2.js:11:15
   11| function f(x: number): $Trusted<number> {
                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ t2.js:21:37

Cannot assign `x` to `y` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2] in the return value. [incompatible-trust]

   t2.js:21:37
   21| var y: number => $Trusted<number> = x;
                                           ^

References:
   t2.js:18:18
   18| var x: number => number = function (x: number): number {
                        ^^^^^^ [1]
   t2.js:21:18
   21| var y: number => $Trusted<number> = x;
                        ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- t2.js:29:1

Cannot cast `b` to explicit 'any' because explicit 'any' [1] is incompatible with trusted number [2].
[incompatible-trust]

   t2.js:29:1
   29| b as any;
       ^

References:
   t2.js:29:6
   29| b as any;
            ^^^ [1]
   t2.js:28:8
   28| var b: number => number = a;
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ t3.js:18:27

Cannot assign `a` to `b` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2]. [incompatible-trust]

   t3.js:18:27
   18| var b: $Trusted<number> = a; // Fails.
                                 ^

References:
   t3.js:17:8
   17| var a: number = composenum(id, id)(42 as any);
              ^^^^^^ [1]
   t3.js:18:8
   18| var b: $Trusted<number> = a; // Fails.
              ^^^^^^^^^^^^^^^^ [2]



Found 5 errors
